front-end/MapleGrammar.g4
grammar MapleGrammar;

// Axiome
start : program+ ;
program : functionDefinition | declaration ;

// Terminaux
MACRO : '#' .+? [\n\r] -> skip ;
WS : [ \t\n\r]+ -> skip ;
SC :  ';' ;
TYPE : 'char'| ('int'('32'|'64')'_t') ;
TYPE_VOID : 'void' ;
CHAR : '\'' [\u0000-\u00FF] '\'' ;
INTEGER : [0-9]+ ('e' [0-9]+)?;
ID : [a-zA-Z_]+ [a-zA-Z0-9_]* ;
value : INTEGER | CHAR ;

// Comments
COMMENT : '/*' .*? '*/' -> channel(HIDDEN) ;
LINE_COMMENT : '//' ~'\n'* '\n' -> channel(HIDDEN) ;

// Opérateurs
opUnaryPostfix : '++' | '--' ;
opUnaryPrefix : '++' | '--' | '+' | '-' | '!' | '~';
opMultiplicative : '*' | '/' | '%'  ;
opAdditive : '+' | '-' ;
opBinaryShift : '<<' | '>>' ;
opCompareRelational : '<' | '<=' | '>' | '>=' ;
opCompareEquality : '==' | '!=' ;
opBinaryAnd : '&' ;
opBinaryXor : '^' ;
opBinaryOr : '|' ;
opAnd : '&&' ;
opOr : '||' ;
opAffectation : '=' | '+=' | '-=' | '*=' | '/=' | '%=' | '<<=' | '>>=' | '&=' | '^=' | '|=' ;

// Expression
expr : accessor
    | value
    | '(' expr ')'
    | expr opUnaryPostfix
    | opUnaryPrefix expr
    | expr opMultiplicative expr
    | expr opAdditive expr
    | expr opBinaryShift expr
    | expr opCompareRelational expr
    | expr opCompareEquality expr
    | expr opBinaryAnd expr
    | expr opBinaryXor expr
    | expr opBinaryOr expr
    | expr opAnd expr
    | expr opOr expr
    | leftValue opAffectation expr ;

// Déclaration
declarationVar : TYPE (ID assignment? ',')* ID assignment? SC ;
declarationTab : TYPE '[' expr ']' ID definitionTab? SC ;
declaration : declarationVar
    | declarationTab  ;

// Affectation
definitionTab : '=' '{' ((value ',')* value)? '}' ;
assignment: '=' expr ;

// Accesseurs
accessorTab : ID '[' expr ']' ;
accessorVar : ID ;
accessorFunction : ID '(' argumentList ')' ;

leftValue : accessorTab
    | accessorVar ;

accessor : leftValue
    | accessorFunction ;

// Structures de contrôle
ifStatement: 'if' '(' expr ')' instruction elseStatement? ;
elseStatement: 'else' instruction ;
whileStatement: 'while' '(' expr ')' instruction ;

// Fonctions
functionDefinition : (TYPE | TYPE_VOID) ID '(' (typeList | TYPE_VOID)? ')' blockFunction ;
returnStatement : 'return' expr SC ;
blockFunction : '{' declaration* instruction* '}' ;
argumentList : ((expr ',')* expr)? ;
typeList : ((TYPE ID ',')* TYPE ID) ;


// Autres structures
block: '{' instruction* '}' ;
statement : expr SC ;

instruction : statement
    | ifStatement
    | whileStatement
    | block
    | returnStatement ;
